--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
         </dependency>
+
+        <!-- needed for form login -->
+        <dependency>
+            <groupId>org.webjars.bowergithub.polymerelements</groupId>
+            <artifactId>iron-form</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
