--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!-- Dependencies -->
-        <vaadin.version>14.0.0.rc1</vaadin.version>
+        <vaadin.version>14.0.0</vaadin.version>
     </properties>
 
     <parent>
