--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
         
         <dependency>
             <groupId>org.springframework.security</groupId>
